--- a/skins/base/base.css
+++ b/skins/base/base.css
@@ -305,7 +305,7 @@ a.channel:hover {text-decoration:none; border-color:#aaa}
 .channelList .stats {float:right; font-size:85%}
 .channelList .stats span {margin-right:10px}
 .channelList .subscription {float:right; margin:-1px 0}
-.channelList .button {width:80px; text-align:center}
+.channelList .button {width:auto; text-align:center}
 .channelList .unsubscribed {opacity:0.5}
 
 .channelList .depth0 {padding:10px 0}
@@ -415,7 +415,7 @@ a.deleteLink:hover {color:#f00 !important; text-decoration:line-through}
 
 
 /* Conversation body */
-#conversationBody {margin-top:20px; clear:both}
+#conversationBody {clear:both}
 #conversationReply {margin:60px 0 30px; clear:left}
 
 
